--- a/part1.Rmd
+++ b/part1.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Part 1
 
-I’m critiquing the visualisation found [here](https://www.themarshallproject.org/2018/03/30/the-myth-of-the-criminal-immigrant?ref=hp-1-112). This would actually be a series of visualisations that discuss the link between immigration and crime. It was a collaboration between The Marshall Project and the *New York Times*’ Upshot. It argues that the idea that greater immigration leads to increasing rates of crime is false and does not correspond to reality.
+I’m critiquing the visualisation found [here](https://www.themarshallproject.org/2018/03/30/the-myth-of-the-criminal-immigrant?ref=hp-1-112). This would actually be a series of visualisations that discuss the link between immigration and crime. It was a collaboration between *The Marshall Project* and the *New York Times*’ Upshot. It argues that the idea that greater immigration leads to increasing rates of crime is false and does not correspond to reality.
 
 The data comes from different sources. The perception that immigrants make crime worse is substantiated on Gallup polls. The comparison between immigration and crime rate was obtained from a journal article that was the result of a collaboration between four universities. This study focused on 200 metropolitan areas throughout the USA. The article covered 1970 to 2010. To offer data up to date, The Marshall Project used information from the American Community Survey and the FBI Uniform Crime Reporting Program to offer data for 2016. Details are offered about how missing cases were treated. Therefore, it can be said that the data behind the visualisations is trustworthy. The visualisations themselves are truthful too, although the last row of visualisations is missing units on its y axis and requires people to actually point above each case (the same is also true for the previous row of visualisations, but there is a legend that states that it refers to change in percentage). Thus, I believe that the visualisations may be called truthful.
 
